resources/editor/editor.css
.content {
    text-align: center;
}

#desc {
    margin-bottom: 12px;
}

#popLoad, #popSignIn, #popConf, #popEmail {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
}

#closeLoad, #closeSignIn, #closeConf, #closeEmail {
    position: absolute;
    top: 8px;
    right: 8px;
    margin: 0;
    color: darkred;
    font-size: 32px;
    cursor: pointer;
    line-height: 0;
}

#closeLoad:hover, #closeSignIn:hover, #closeConf:hover, #closeEmail:hover {
    font-size: 40px;
    top: 4px;
    right: 4px;
}

#load-window {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 80%;
    height: 75%;
    box-shadow: -5px 5px 5px 5px black;
}

#signIn-window, #email-window {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 30%;
    min-width: 250px;
    box-shadow: -5px 5px 5px 5px black;
}

#email-window {
    width: 40%;
}

#signIn-window label, #email-window label {
    font-size: 16px;
    margin-left: auto;
    margin-right: auto;
}

#user, #email, #pass, #conf {
    border: 1px solid black;
    width: 80%;
    height: 30px;
    margin-bottom: 1rem;
    margin-left: .5rem;
    display: inline-block;
}

#signIn, #signUp, #email-btn, .renameBtn, .delBtn {
    width: auto;
    height: 40px;
    border-radius: 2px;
    margin-bottom: 10px;
}

#signIn:hover, #signUp:hover, #email-btn:hover, .renameBtn:hover, .delBtn:hover {
    background-color: rgb(189, 189, 189);
}

#toSignUp, #toSignIn {
    color: rgb(0, 0, 155);
    text-decoration: underline;
    cursor: pointer;
}

#toSignUp:hover, #toSignIn:hover {
    color: blue;
}

#toSignUp {
    margin-right: 8px;
}

#login-failure, #del-failure {
    margin-top: 1rem;
    color: darkred;
    animation: flash 0.5s ease-in-out;
    animation-fill-mode: forwards;
}
@keyframes flash {
    0%{color:rgb(204, 0, 0)}
    100%{color:darkred}
}

#login-success {
    margin-top: 1rem;
    color: green;
}

#search {
    float: left;
    width: 50%;
    height: 32px;
    text-align: left;
    border: 1px solid black;
}

.option {
    width: 16px;
    height: 16px;
}

#options {
    line-height: 20px;
    white-space: nowrap;
}

#import {
    display: none;
}

#controls {
    border-bottom: 2px dashed purple;
    margin-bottom: 12px;
    align-items: center;
    padding-bottom: 1rem;
}

#controls div:last-child {
    border-right: none;
}

.header-btn {
    background-color: rgb(214, 214, 214);
    border: 2px solid black;
    border-radius: 5px;
    font-size: 1.35rem;
    width: 75%;
    margin: 12px;
}

.header-btn:hover {
    background-color: rgb(187, 187, 187);
}

#controls .col-3, #controls .col-2 {
    display: flex;
    justify-content: space-around;
}

#controls div {
    padding: 0;
}

#download input {
    width: 20px;
    height: 20px;
}

#hidden-dl {
    display: none;
}

.linkbreak {
    display: none;
}

@media (max-width: 991px) {
    .header-btn {
        font-size: 1rem;
        padding-left: 12px;
        padding-right: 12px;
        width: auto;
        margin: 0;
        margin-left: auto;
        margin-right: auto;
    }
    #options {
        line-height: 16px;
    }
    .option {
        width: 12px;
        height: 12px;
    }
    #nextPage {
        right: 24px !important;
    }
    #prevPage {
        left: 24px !important;
    }
    .linkbreak {
        display: unset;
    }
    #email-window {
        width: 50%;
    }
}

@media (max-width: 767px) {
    #controls {
        padding-left: 8px;
        padding-right: 8px;
    }
    .header-btn {
        font-size: 0.6rem;
        border-width: 1px;
        border-radius: 3px;
    }
    #options {
        line-height: 0px;
    }
    #options label {
        font-size: 8px;
    }
    .option {
        width: 10px;
        height: 10px;
    }
    #nextPage {
        right: 12px !important;
    }
    #prevage {
        right: 12px !important;
    }
    #email-window {
        width: 60%;
    }
}

@media (max-width: 536px) {
    #options label {
        font-size: 6px;
    }
    .option {
        width: 8px;
        height: 8px;
    }
}

#response {
    position: fixed;
    left: 2rem;
    border: 2px solid black;
    border-radius: 10px;
    box-shadow: 5px 5px 10px black;
    margin-top: 1rem;
    text-align: center;
    width: 250px;
    animation: slide 0.5s ease-out;
    animation-fill-mode: both;
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
    padding: 2px;
    padding-right: 20px;
}
@keyframes slide {
    0%{bottom:-64px}
    100%{bottom:2rem}
}
#response::-webkit-scrollbar {
    width: 0;
    height: 0;
}

#closeResponse {
    position: absolute;
    color: darkred;
    cursor: pointer;
    font-size: 16px;
    top: 0;
    right: 3px;
}

#response-text {
    text-align: center;
    margin: 0;
}

.success {
    background-color: lightgreen;
}

.failure {
    background-color: palevioletred;
}

#simple {
    height: calc(100% - 3rem - 8px - 2rem - 8px);
}

#charHead {
    width: 100%;
    height: 3rem;
    border-bottom: 2px dashed purple;
    margin-bottom: 8px;
}

#characters, .simplebar-content {
    width: 100%;
    height: 100%;
}

#chars {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.charCard {
    height: 250px;
    width: 200px;
    border: 2px solid black;
    border-radius: 5px;
    overflow: hidden;
    background-color: blueviolet;
    margin: 12px;
    cursor: pointer;
    position: relative;
}

.charCard:hover, #newChar:hover {
    box-shadow: -3px 3px 3px 3px black;
}

.curChar {
    box-shadow: -3px 3px 3px 3px yellow;
}

.loadBox {
    width: 100%;
    height: 100%;
}

.charImg {
    height: 90%;
}

.charName {
    border-top: 2px solid black;
    width: 100%;
    height: 10%;
}

.charImgA {
    height: 80%;
}

.charInfo {
    border-top: 2px solid black;
    width: 100%;
    height: 20%;
}

.bi-three-dots-vertical {
    position: absolute;
    top: 8px;
    right: 8px;
    font-size: 24px;
    color:rgba(240, 240, 240, 0.5)
}

.bi-three-dots-vertical:hover {
    color: rgba(122, 122, 122, 0.75);
}

.drop {
    display: none;
    position: absolute;
    top: 40px;
    right: 8px;
    text-align: left;
    border: 2px solid black;
    border-radius: 3px;
    background-color: mediumpurple;
}

.drop a {
    width: 100%;
    height: auto;
    color: black;
    text-decoration: none;
    display: block;
}

.drop a:hover {
    background-color: rgb(118, 87, 180);
}

.drop a:last-child {
    color: darkred;
}

#confirm-window {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 40%;
    min-width: 250px;
    box-shadow: -5px 5px 5px 5px black;
}

#newName, #confDel {
    height: 45px;
    margin-bottom: 1rem;
}

#newChar {
    position: relative;
    height: 250px;
    width: 200px;
    border: 2px solid black;
    border-radius: 5px;
    cursor: pointer;
    margin: 12px;
}

#newChar i {
    position: absolute;
    top: calc(50% - 16px);
    left: calc(50% - 16px);
}

#charFoot {
    width: 100%;
    height: 2rem;
    border-top: 2px dashed purple;
    margin-top: 8px;
    padding: 8px;
}

.arrow {
    position: absolute;
    margin: 0;
    color: purple;
    font-size: 32px;
    cursor: pointer;
    line-height: 0;
    display: none;
}

#prevPage {
    left: 30px;
}

#nextPage {
    right: 30px;
}

#pageCount {
    font-size: 20px;
}

#statflip-switch {
    position: absolute;
    left: 50px;
    top: 515px;
}

/* toggle switch from https://www.w3schools.com/howto/howto_css_switch.asp */
.switch {
    position: relative;
    display: inline-block;
    width: 30px;
    height: 60px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 2px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #2196F3;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateY(-26px);
    -ms-transform: translateY(-26px);
    transform: translateY(-26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

